# CMakeTemplate

./: CMakeLists.txt  README.md  build.sh
packaging/: CMakeLists.txt  package.spec.in
src/: CMakeLists.txt  Greetings.cpp  Greetings.h  main.cpp
test/: CMakeLists.txt  Greetings_Test.cpp  main.cpp
